--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ env_logger = "^0.10"
 sqlx = { version = "^0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "json" ] }
 dotenv = "^0.15"
 chrono = { version = "^0.4", features = ["serde"]}
+bcrypt = "0.13.0"
+
+[profile.dev.package.sqlx-macros]
+opt-level = 3
