--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-POSTGRES_URL=postgresql://admin:admin@localhost/eradb
+DATABASE_URL=postgresql://admin:admin@localhost/eradb
 HOST=localhost
 PORT=8080
