--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ uuid = { version = "^1", features = ["v4", "serde"] }
 dotenv = "^0.15"
 chrono = { version = "^0.4", features = ["serde"]}
 bcrypt = "0.13.0"
-rec = {path = "../rec", version="0.1.0"}
+rec = { git = "https://github.com/mahmoud-eltahawy/rec.git"}
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
