db sync and update system add

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ serde_derive = "1.0.8"
 serde_json = "1.0.2"
 log = "^0.4"
 env_logger = "^0.10"
-sqlx = { version = "^0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "json" ] }
+sqlx = { version = "^0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "json","migrate" ] }
 uuid = { version = "^1", features = ["v4", "serde"] }
 dotenv = "^0.15"
 chrono = { version = "^0.4", features = ["serde"]}
 bcrypt = "0.13.0"
-rec = { git = "https://github.com/mahmoud-eltahawy/rec.git"}
+rec = { path = "../rec"}
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
