--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://admin:admin@localhost/eradb
+DATABASE_URL=postgresql://mahmoud:mahmoud@localhost/mahmoud
 HOST=0.0.0.0
 PORT=8080
